# src/routes/index.ts
@@ -1,10 +1,11 @@
-import { Router  } from "express";
-import { categoriesRoutes } from "./categories.routes";
-import { specificationRoutes } from "./specifications.routes";
+import { Router } from 'express'
 
-const router = Router();
+import { categoriesRoutes } from './categories.routes'
+import { specificationRoutes } from './specifications.routes'
 
-router.use('/categories', categoriesRoutes);
-router.use('/specifications', specificationRoutes);
+const router = Router()
+
+router.use('/categories', categoriesRoutes)
+router.use('/specifications', specificationRoutes)
 
 export { router }
